fix z-indexes

--- a/share/static/alice-default.css
+++ b/share/static/alice-default.css
@@ -12,14 +12,10 @@ body {
   padding: 0;
   color: black; }
 
-ul#tabs {
-  z-index: 20; }
-
 ul#tabs li:hover {
   cursor: default; }
 
 ul#controls {
-  z-index: 30;
   background: #dddddd; }
 
 body.blurred ul#controls {
@@ -210,7 +206,8 @@ div#tab_container {
   bottom: 0px;
   left: 0px;
   right: 0px;
-  height: 52px;
+  z-index: 900;
+  height: 51px;
   background: #dddddd; }
 
 body.blurred div#tab_container {
@@ -269,8 +266,8 @@ ul#tabs li.active div.hit_area {
   margin-top: -1px; }
 
 ul#tabs li.active {
-  height: 23px;
-  z-index: 21; }
+  height: 24px;
+  z-index: 903; }
 
 ul#tabs li.active:hover div.hit_area {
   background: #efefef; }
@@ -387,7 +384,7 @@ li.event div.left span.timestamp {
   -webkit-transition: opacity 0.1s ease-in-out; }
 
 ul.messages li.avatar:not(.consecutive) {
-  z-index: 900; }
+  z-index: 800; }
 
 div.left img {
   border: 1px solid white;
@@ -398,7 +395,7 @@ div.left img {
 
 div.left span.nickhint {
   position: absolute;
-  z-index: 901;
+  z-index: 801;
   right: 5px;
   top: 4px;
   padding: 0 2px;
@@ -663,7 +660,7 @@ ul#logresults span.metadata {
 
 div#help {
   position: absolute;
-  z-index: 999;
+  z-index: 980;
   background: rgba(0, 0, 0, 0.8);
   color: #fff;
   left: 20px;
@@ -808,7 +805,7 @@ div.color_picker div.toggle span#bg.active {
     position: absolute;
     bottom: 2px;
     right: 0px;
-    z-index: 999; }
+    z-index: 904; }
 
   div.msg.monospace, div.msg.announce {
     line-height: 11px; } }
@@ -819,7 +816,7 @@ div.config {
   left: 50%;
   background: #efefef;
   padding-bottom: 29px;
-  z-index: 999;
+  z-index: 981;
   -webkit-box-shadow: 0 0 10px #000;
   -moz-box-shadow: 0 0 10px #000;
   box-shadow: 0 0 10px #000;
